# quantera

./: .gitignore  CLOUDFLARE_MCP_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cloudflare.md  INFRASTRUCTURE_DEPLOYMENT.md  Implementation_plan.md  LICENSE  Product_Roadmap.md  README.md  SECURITY.md  WEF_Implementation_plan.md  WEF_Implementation_plan.md.backup  docker-compose.dev.yml  env.example  mythril.config.json  package-lock.json  package.json  phase4-prompt.txt  production-readiness.skill  progress.md  tech_spec 2.md  tech_spec.md  wrangler.toml
.cloudflare/: package.json
.cloudflare/workers-site/: index.js
.cursor/plans/: quantera-industry-leadership-v2-0-c6ce24f9.plan.md
.cursor/rules/: quantera.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-testing.yml  contract-testing.yml  frontend-testing.yml
backend/: .env.example  Cargo.toml
backend/compliance_service/: Cargo.toml
backend/compliance_service/src/: config.rs  ipfs.rs  kyc.rs  lib.rs  sanctions.rs  tax.rs
backend/ethereum_client 2/: Cargo.toml
backend/ethereum_client/src/: lib.rs
backend/migrations/: 001_auth_schema.sql  002_portfolio_schema.sql  003_tradefinance_schema.sql  004_security_constraints.sql  seed_test_data.sql  v2_0_0_compliance_tables.sql  v2_0_0_risk_tables.sql
backend/risk_service/: Cargo.toml  env.template  start_service.sh  test_api.sh
backend/risk_service/src/: config.rs  ethereum_client.rs  lib.rs  websocket.rs
backend/src/: Cargo.toml  main.rs
backend/src/api/: mod.rs  portfolio_api.rs  secure_api.rs  tradefinance_api.rs
backend/src/compliance/: enhanced_compliance_engine.rs  mod.rs
backend/src/security/: backend_security_tests.rs
backend/src/services/: cross_exchange_service.rs  institutional_custody_service.rs  liquidity_analytics_service.rs  market_maker_service.rs  mod.rs  multi_chain_asset_service.rs  portfolio_service.rs  prime_brokerage_service.rs  tradefinance_service.rs
backend/treasury_service/: Cargo.toml
backend/treasury_service 2/: Cargo.toml
backend/treasury_service 2/src/: lib.rs
backend/treasury_service/src/: asset_management_service.rs  auth_service.rs  clients.rs  lib.rs  user_service.rs  yield_scheduler.rs
backend/treasury_service/src/api/: asset_factory_api.rs  auth.rs  environmental_assets.rs  health.rs  l2_bridge_api.rs  liquidity_pools_api.rs  mod.rs  smart_account_api.rs  trading.rs  treasury.rs  user.rs  websocket.rs  yield_optimizer_api.rs
backend/treasury_service/src/clients/: asset_factory_client.rs  compliance_client.rs  l2_bridge_client.rs  l2_client.rs  liquidity_pools_client.rs  mod.rs  smart_account_client.rs  trading_client.rs  treasury_token_client.rs  yield_optimizer_client.rs
contracts/: ComplianceModule.sol  TradingModule.sol  TreasuryRegistry 2.sol  TreasuryToken.sol
contracts/accounts/: SmartAccountTemplates.sol
contracts/bridge/: UniversalBridge.sol
contracts/compliance/: AutomatedComplianceEngine.sol
contracts/exchange/: ArbitrageDetector.sol  DualListingManager.sol
contracts/factories/: AssetFactory.sol  AssetTemplateRegistry.sol
contracts/institutional/: CrossMargining.sol  InstitutionalCustody.sol  PrimeBrokerage.sol  RiskEngine.sol
contracts/interfaces/: IAssetFactory.sol  IComplianceModule.sol  IL2Bridge 2.sol  IL2Bridge.sol  ILiquidityPools.sol  ISmartAccount.sol  ISmartAccountTemplates.sol  ITradingModule 2.sol  ITreasuryRegistry.sol  ITreasuryToken.sol  IYieldOptimizer.sol
contracts/l2/: L2Bridge.sol  L2BridgeGasOptimizer.sol
contracts/lifecycle/: AssetLifecycleManager.sol
contracts/liquidity/: DynamicFeeStructure.sol  LiquidityPoolOptimizer.sol  LiquidityPools.sol  MarketMakerIncentives.sol
contracts/settlement/: SecurityTestSuite.sol  SettlementAssetManager.sol
contracts/standards/: ComplianceAwareToken.sol
contracts/templates/: EnvironmentalAssetTemplate.sol  RealEstateAssetTemplate.sol  TradeFinanceAssetTemplate.sol  TreasuryAssetTemplate.sol
contracts/tokens/: EnhancedSecurityToken.sol
contracts/yield/: YieldOptimizer.sol
deployments/testnet/: arbitrum_sepolia_deployment.json  asset_registry.json  avalanche_fuji_deployment.json  bridge_config.json  deploy_contracts.js  ethereum_sepolia_deployment.json  monitoring_config.json  networks.json  optimism_sepolia_deployment.json  polygon_mumbai_deployment.json  run_tests.sh  test_config.json
docs/: api_setup.md  branding_guidelines.md  implementation_plan_update.md  index.md  openapi.yaml  progress.md  sustainable_finance_initiative.md
docs/api/: index.md  l2bridge-api.md  smart-account-api.md
docs/platform/: executive-summary.md  index.md  smart-contracts.md  technical-architecture.md
docs/security/: SmartAccountTemplates_audit_prep.md  audit_preparation.md  contract_audit_preparation.md  contract_optimization.md  implementation_plan.md  liquidity_pools_optimizations.md
docs/testing/: cross-chain-testing-guide.md
docs/user-guides/: l2bridge-guide.md  smart-account-guide.md
docs/week15/: week15-completion-summary.md
docs/weekly updates/: week14-completion-summary.md  week15-security-overhaul.md
frontend/: .cfignore  .env.example  TEST_STATUS.md  download_asset_images.sh  jest.config.js  jest.setup.js  package 2.json  package-lock.json  package.json  playwright.config.ts  test-all.sh  tsconfig.json  wrangler.toml
frontend/e2e/: basic-navigation.spec.ts  tsconfig.json
frontend/node_modules 2/: .package-lock.json
frontend/public/: _headers  _routes.json  index.html
frontend/public 2/: index.html  manifest.json
frontend/scripts/: a11y-test.js
frontend/src/: App.css  App.js  App.jsx  App.tsx  README-YieldStrategy.md  index.js  mui-declarations.d.ts  setupTests.ts
frontend/src 3/: App.js
frontend/src/api/: api.js  (+4 more)
reports/cross-chain/: cross_chain_deployment_20250526_092438.md
reports/week15/: week15-implementation-report.json
scripts/: run_local 2.sh  run_local.sh  setup_local_env.sh  test-asset-links.js  week15-implementation.sh
scripts/cross-chain/: deploy-testnet.sh  validate-deployment.sh
(+242 files in other folders)
