[workspace]
members = [
    "src",
    # "ethereum_client", # Temporarily disabled due to alloy version conflicts
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }

# Alloy framework for Ethereum (latest versions)
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-provider = "0.3"
alloy-signer = "0.3"
alloy-contract = "0.3"
alloy-json-rpc = "0.3"
alloy-network = "0.3" 