[workspace]
members = [
    "compliance_service",
    "risk_service",
    "src", # Re-enabled for Phase 2
    # "ethereum_client", # Temporarily disabled due to alloy version conflicts
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
jsonwebtoken = "9.0"

# Additional dependencies needed by services
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
dotenv = "0.15"
hex = "0.4"

# Alloy framework for Ethereum (latest versions)
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-provider = "0.3"
alloy-signer = "0.3"
alloy-contract = "0.3"
alloy-json-rpc = "0.3"
alloy-network = "0.3" 
