[package]
name = "compliance_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "ws"] }

# Ethereum
ethers = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono", "uuid"] }

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client for KYC providers
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# IPFS client
ipfs-api-backend-hyper = { version = "0.6", features = ["with-send-sync"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

# Rate limiting
governor = "0.6"

# Environment
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Tax calculation
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# String similarity
strsim = "0.11"

[lib]
name = "compliance_service"
path = "src/lib.rs"

[[bin]]
name = "compliance_service_server"
path = "src/bin/server.rs"