[package]
name = "risk_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
rust_decimal = { version = "1.33", features = ["maths", "std"] }
rust_decimal_macros = "1.33"
ndarray = "0.15"
rand = "0.8"
statrs = "0.16"  # Statistics library for VaR calculations
tokio-tungstenite = "0.21"  # WebSocket support
futures-util = "0.3"  # For stream handling
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dotenv = "0.15"  # Environment configuration

# Temporarily comment out until ethereum_client is fixed
# ethereum_client = { path = "../ethereum_client" }

[lib]
name = "risk_service"
path = "src/lib.rs"

[[bin]]
name = "risk_service_server"
path = "src/bin/server.rs"