[package]
name = "quantera-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }

# Web framework
axum = "0.7.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

# Database (if needed)
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Alloy framework for Ethereum
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-contract = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-network = { workspace = true }

[[bin]]
name = "quantera-backend"
path = "main.rs" 