[package]
name = "treasury_service"
version = "0.1.0"
edition = "2021"
description = "Treasury management service for TreasuryToken platform"

[dependencies]
ethereum_client = { path = "../ethereum_client" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Alloy framework dependencies
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true } 