[package]
name = "treasury_service"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum_client = { path = "../ethereum_client" }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hex = "0.4"
rand = "0.8"
jsonwebtoken = "9.1"

# API dependencies
warp = "0.3"
http = "0.2"
tower-http = { version = "0.4", features = ["cors", "trace"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 